reports/intro-1.log
Traceback (most recent call last):
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/opt/hostedtoolcache/Python/3.8.15/x64/lib/python3.8/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
%pip3 install folium
import folium
m = folium.Map(
    location=[37.701, -121.073],
    zoom_start=8,
    tiles='Stamen Terrain'
)

folium.Marker(
    location=[38.2574, -120.8502],
    popup='Pardee Dam',
    icon=folium.Icon(icon='cloud')
).add_to(m)

folium.Marker(
    location=[37.8922222, -122.2011111],
    37.8922222°N, -122.2011111°W
    popup='Orinda Water Treatment Plant',
    icon=folium.Icon(color='blue')
).add_to(m)

folium.Marker(
    location=[37.8016, -122.2734],
    popup='EBMUD Headquarters',
    icon=folium.Icon(color='red', icon='info-sign')
).add_to(m)

m
------------------

[0;36m  Cell [0;32mIn[3], line 17[0;36m[0m
[0;31m    37.8922222°N, -122.2011111°W[0m
[0m               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid character in identifier

SyntaxError: invalid character in identifier (2462899379.py, line 17)

